<resources>
    <string name="facebook_app_id">414494206500952</string>
    <string name="fb_login_protocol_scheme">fb414494206500952</string>
    <string name="app_name">Free Intraday Tips</string>
    <string name="screener">Screener</string>
    <string name="top_movers">Top Movers</string>
    <string name="top_loser">Top Loser</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="news">News</string>
    <string name="global">Indices</string>
    <string name="more">More</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hitmap">Heatmap</string>
    <string name="about">About</string>
    <string name="m_amp_l"><![CDATA[M & L]]></string>
    <string name="sector">Sector</string>
    <string name="stock">Stock</string>
    <string name="sss"><![CDATA[Free Intraday Learning Tips gives Free STOCK MARKET learning & Education Ideas. Before TRADING OR INVESTING consult your financial advisor. Make your own Strategy don\'t depend others and don\'t follow anyone blindly. in stock market no one is 100%-sure if anyone told you they told you lie. if anyone are 100%-sure then why they are not become a Millonare so stop depending others including Me also.]]></string>
    <string name="data_dis"><![CDATA[Free Intraday Learning Tips are not SEBI Registered Analyst. all tips are only for Learning & Education purpose. Non Advisory, Discretions​. No Claim Rights Reserved. Free Intraday Learning Tips are not Responsible for any PROFIT & LOSS. Before follow our Tips Please Consult YOUR FINANCIAL ADVISOR. \n \n The information provided in APP is only for educational and informational purposes not for trading or investing purposes and may be delayed. APP  provide technical analysis tools for educational purpose only. please do your own analysis before you make any investment decisions .we don’t take any responsibility for the accuracy of data analysis or conclusion.before taking any decision please consult your financial advisor because we are not taking any  responsibility of profit and loss trading is extremely risky and the potential of loss is very high.]]></string>
    <string name="sss1">All Membership Fees are Non-Refundable once Paid, The Amount is Charged only For Ads Free Version of this App. Open Demat Account Through US and Get Two Months Free Premium Plan</string>
    <string name="banner">ca-app-pub-8515817249593489/2685998979</string>
    <string name="strong_buy">STRONG BUY</string>
    <string name="strong_sell">STRONG SELL</string>
    <string name="disclaimer">DISCLAIMER</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="accept">Accept</string>
    <string name="indicator">Indicator</string>
    <string name="rotate_screen">Rotate Screen</string>
    <string name="edit">Edit</string>
    <string name="notification_title">Notification Title</string>
    <string name="stock_name">HindPetro</string>
    <string name="date_time">Date/Time</string>
    <string name="date_time_value">30-Jul-2018 at 9:08 pm</string>
    <string name="time">03:35:09 AM</string>
    <string name="_200_00">200.00</string>
    <string name="ticker">Ticker</string>
    <string name="low">Low</string>
    <string name="_112_0">112.0</string>
    <string name="high">High</string>
    <string name="pr_close">Pr. Close</string>
    <string name="open">Open</string>
    <string name="_280_00">280.00</string>
    <string name="buy_range">BUY Range</string>
    <string name="buy_range_price">291.01–292.00</string>
    <string name="_1">1</string>
    <string name="price">Price</string>
    <string name="sell">SELL</string>
    <string name="chart">CHART</string>
    <string name="fund">FUND.</string>
    <string name="tech">TECH.</string>
    <string name="hypene">-</string>
    <string name="traded_qty">Traded Qty</string>
    <string name="_100">100</string>
    <string name="prev_close">Prev Close</string>
    <string name="_300">300</string>
    <string name="oll">Oll</string>
    <string name="value">Value</string>
    <string name="volume">Volume</string>
    <string name="interval">Interval</string>
    <string name="_1d">1D</string>
    <string name="_5d">5D</string>
    <string name="_1m">1M</string>
    <string name="_3m">3M</string>
    <string name="_6m">6M</string>
    <string name="ytd">YTD</string>
    <string name="_1y">1Y</string>
    <string name="_2y">2Y</string>
    <string name="_5y">5Y</string>
    <string name="_10y">10Y</string>
    <string name="max">MAX</string>
    <string name="upper_band">Upper Band</string>
    <string name="lower_band">Lower Band</string>
    <string name="next">Next</string>
    <string name="_12_july">12 July</string>
    <string name="_4_38_usd">4.38 USD</string>
    <string name="free_intraday_tips_buy_sell">Free Intraday Tips - Buy / Sell</string>
    <string name="entry_price">ENTRY PRICE</string>
    <string name="stop_loss">STOP LOSS</string>
    <string name="quantity">Quantity</string>
    <string name="target">TARGET</string>
    <string name="profit">PROFIT</string>
    <string name="risk_reward">RISK REWARD</string>
    <string name="_1_2">1:2</string>
    <string name="limit">LIMIT</string>
    <string name="market">Market</string>
    <string name="reg">REG</string>
    <string name="bo">BO</string>
    <string name="co">CO</string>
    <string name="amo">AMO</string>
    <string name="total_price">TOTAL PRICE :</string>
    <string name="open_interest">OPEN INTEREST</string>
    <string name="_1_639_eth">1.639 ETH</string>
    <string name="_11">11</string>
    <string name="julianna_carter">Julianna Carter</string>
    <string name="photographer">Photographer</string>
    <string name="button">Button</string>
    <string name="full_screen_chart">Full Screen Chart</string>
    <string name="equity">EQUITY</string>
    <string name="option">OPTION</string>
    <string name="mcx">MCX</string>
    <string name="forex">FOREX</string>
    <string name="delivery">DELIVERY</string>
    <string name="yearly">Yearly</string>
    <string name="quaterly">Quaterly</string>
    <string name="learn">Learn</string>
    <string name="stock_news">Stock News</string>
    <string name="startup_news">Startup News</string>
    <string name="international">International</string>
    <string name="top_news">Top News</string>
    <string name="sips">SIPS</string>
    <string name="global_market">Global Market</string>
    <string name="mutual_fund">Mutual Fund</string>
    <string name="sips_news">SIPS News</string>
    <string name="commodity">Commodity</string>
    <string name="politics_news">Politics News</string>
    <string name="currency">Currency</string>
    <string name="sports_news">Sports News</string>
    <string name="commodity_news">Commodity News</string>
    <string name="business_news">Business News</string>
    <string name="currency_news">Currency News</string>
    <string name="economy_news">Economy News</string>
    <string name="earning_news">Earning News</string>
    <string name="reports">Reports</string>
    <string name="premarket_open">Premarket Open</string>
    <string name="active_stock">Active Stock</string>
    <string name="_52_week_high">52 Week High</string>
    <string name="_52_week_low">52 Week Low</string>
    <string name="volume_gainers">Volume Gainers</string>
    <string name="price_band_hitters">Price Band Hitters</string>
    <string name="oi_spurts">OI Spurts</string>
    <string name="bulk_deals">Bulk Deals</string>
    <string name="block_deals">Block Deals</string>
    <string name="fii_amp_dii_data"><![CDATA[FII & DII Data]]></string>
    <string name="most_delivery">Most Delivery</string>
    <string name="short_selling">Short Selling</string>
    <string name="economy">Economy</string>
    <string name="forecast">Forecast</string>
    <string name="result_equity">RESULT EQUITY</string>
    <string name="result_option">Result Option</string>
    <string name="movers">Movers</string>
    <string name="calls">CALLS</string>
    <string name="puts">PUTS</string>
    <string name="login_and_buy_pro_plus_plan_to_unlock">Login and Buy PRO PLus Plan to Unlock</string>
    <string name="assuming_1_00_000_capital_in_each_stocks">Assuming 1,00,000 Capital in Each Stocks</string>
    <string name="major_holders">Major Holders</string>
    <string name="insider_roster">Insider Roster</string>
    <string name="insider_transactions">Insider Transactions</string>
    <string name="market_cap">Market Cap</string>
    <string name="stock_pe">Stock PE</string>
    <string name="book_value">Book Value</string>
    <string name="roce">ROCE</string>
    <string name="face_value">Face Value</string>
    <string name="roe">ROE</string>
    <string name="diviend_yield">Diviend Yield</string>
    <string name="average_volume">Average Volume</string>
    <string name="vwap">VWAP</string>
    <string name="upper_circuit">Upper Circuit</string>
    <string name="lower_circuit">Lower Circuit</string>
    <string name="reliable_qty">Reliable Qty.</string>
    <string name="deliverable_qty">Deliverable Qty.</string>
    <string name="change">CHANGE</string>
    <string name="change_percentage">CHANGE %</string>
    <string name="image">Image</string>
    <string name="progress">Progress</string>
    <string name="news_title">Hellow \n gdgdsgd</string>
    <string name="new_desc">ffasfasf \n dfdsfs</string>
    <string name="ffasfasf">ffasfasf</string>
    <string name="_122">122</string>
    <string name="_13_july">13 July</string>
    <string name="oi_chng">OI Chng.</string>
    <string name="chng_in_ltp" formatted="false">%% Chang in LTP</string>
    <string name="expiry">EXPIRY</string>
    <string name="strike_price">Strike Price</string>
    <string name="type">Type</string>
    <string name="volume_contacts">Volume Contacts</string>
    <string name="underlying_value">Underlying value</string>
    <string name="chng_in_oi">Chng in OI</string>
    <string name="value_in_crores">VALUE (in ₹ Crores)</string>
    <string name="futures">FUTURES</string>
    <string name="opt_nat">OPT (Nat.)</string>
    <string name="total">TOTAL</string>
    <string name="opt_pre">OPT (Pre.)</string>
    <string name="underlying_value_cm">Underlying value (CM)</string>
    <string name="_22_00">22.00</string>
    <string name="oi">OI</string>
    <string name="iv">IV</string>
    <string name="hello_test_message">Hello Test Message</string>
    <string name="hindpetro">HindPetro</string>
    <string name="_30_jul_2018_at_9_08_pm">30-Jul-2018 at 9:08 pm</string>
    <string name="cmp">CMP</string>
    <string name="loss">LOSS</string>
    <string name="_291_01_292_00">291.01–292.00</string>
    <string name="_2">2</string>
    <string name="achieved">ACHIEVED</string>
    <string name="done">DONE</string>
    <string name="value_lacs">VALUE (Lacs.)</string>
    <string name="_1_per">1%</string>
    <string name="_52_high">52 High</string>
    <string name="_52_low">52 Low</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="total_profit">TOTAL PROFIT</string>
    <string name="total_loss">TOTAL LOSS</string>
    <string name="_0_00">0.00</string>
    <string name="accuracy">ACCURACY</string>
    <string name="target_1">TARGET 1</string>
    <string name="target_2">TARGET 2</string>
    <string name="target_3">TARGET 3</string>
    <string name="equal">=</string>
    <string name="new_52w_h">New 52W/H</string>
    <string name="revenue">Revenue</string>
    <string name="date_2019_01_01_18_00">Date : 2019–01–01 18:00</string>
    <string name="qty_10">Qty : 10</string>
    <string name="symbol">SYMBOL</string>
    <string name="sell_range">SELL RANGE</string>
    <string name="buy">BUY</string>
    <string name="information">Information</string>
    <string name="open_zerodha_account">OPEN ZERODHA ACCOUNT</string>
    <string name="close">CLOSE</string>
</resources>