<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:id="@+id/scroll"
        android:layout_marginBottom="100dp"
        android:layout_height="match_parent">
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textAlignment="center"
            android:background="#000"
            android:id="@+id/hide"
            android:padding="5dp"
            android:textColor="#FFF"
            android:text="@string/disclaimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/hide2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:padding="15dp"
            android:text="@string/data_dis"
            android:textColor="#000"
            android:textSize="17sp" />
        <TextView
            android:textAlignment="center"
            android:background="#000"
            android:id="@+id/hide3"
            android:padding="5dp"
            android:textColor="#FFF"
            android:text="@string/terms_amp_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/hide4"
            android:padding="15dp"
            android:textSize="17sp"
            android:textColor="#000"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/sss"
            android:layout_marginBottom="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
</androidx.core.widget.NestedScrollView>
    <Button
        android:text="@string/accept"
        android:id="@+id/clode"
        android:layout_marginTop="-100dp"
        android:textColor="#fff"
        android:layout_below="@id/scroll"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>
