<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:hint="@string/edit"
        android:autofillHints="name"
        android:visibility="invisible"
        android:inputType="text" />
    <TextView
        android:id="@+id/title"
        android:padding="5dp"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="#fff"
        android:background="#009688"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="@string/free_intraday_tips_buy_sell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ProgressBar
        android:id="@+id/progress"
        android:elevation="5dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:targetApi="lollipop" />
<WebView
    android:layout_below="@id/title"
    android:id="@+id/webview"
    android:layout_marginBottom="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:layout_weight="1"
        android:text="@string/open_zerodha_account"
        android:id="@+id/open_zerodha"
        android:textSize="12sp"
        android:singleLine="true"
        android:textColor="#F44336"
        android:background="@drawable/border_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle" />
    <Button
        android:layout_weight="1"
        android:textSize="12sp"
        android:text="@string/close"
        android:id="@+id/close"
        android:textColor="#2196F3"
        android:background="@drawable/border_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</RelativeLayout>