<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:clipToPadding="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:layout_weight="1"
                        android:text="@string/buy"
                        android:elevation="5dp"
                        android:layout_margin="5dp"
                        android:textColor="#00BCD4"
                        android:background="@drawable/border_blue_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:targetApi="lollipop"
                        style="?android:attr/buttonBarButtonStyle" />
                    <Button
                        android:text="@string/sell"
                        android:textColor="#F44336"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:elevation="5dp"
                        android:background="@drawable/border_red"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:targetApi="lollipop"
                        style="?android:attr/buttonBarButtonStyle" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:clipToPadding="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:text="@string/chart"
                        android:textColor="#673AB7"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:elevation="5dp"
                        android:background="@drawable/border_green"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:targetApi="lollipop"
                        style="?android:attr/buttonBarButtonStyle" />
                    <Button
                        android:layout_weight="1"
                        android:text="@string/information"
                        android:elevation="5dp"
                        android:layout_margin="5dp"
                        android:textColor="#E91E63"
                        android:background="@drawable/border_pinkk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:targetApi="lollipop"
                        style="?android:attr/buttonBarButtonStyle" />

                </LinearLayout>
            </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>